--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,12 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./src/theming"
+              ]
+            }
           },
           "configurations": {
             "production": {
@@ -129,6 +134,6 @@
   },
   "defaultProject": "Vapulus-Task",
   "cli": {
-    "analytics": "622b0a20-4db2-43d7-a044-24b715e01152"
+    "analytics": "b3859e52-616b-4f4b-9f50-a4f14e8c4f05"
   }
 }
